syntax = "proto3";

option java_package = "com.test.grpc"; // questo Ã¨ il package di java, ricordarsi di dare un nome sensato

service ProductsService {
    rpc GetProduct(ProductRequest) returns (ProductResponse){}
}

message ProductRequest {
    string productId = 1;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    uint32 priceCents = 3;
    bool orderable = 4;
}